guestbook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  namespace: example-argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: test-selfsigned
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      -  path: /gb
         pathType: Prefix
         backend:
           service:
             name: guestbook-ui
             port:
               number: 80
